feat: Implement a comprehensive admin panel with backend APIs for managing orders, products, and categories, a corresponding frontend UI, and JWT-based security with admin role management.